--- a/docs/src/index.scss
+++ b/docs/src/index.scss
@@ -44,9 +44,9 @@ td, th {
 }
 
 // <libs>
-@import '../../node_modules/codemirror/lib/codemirror.css';
-@import '../../node_modules/codemirror/theme/material.css';
-@import '../../node_modules/codemirror/theme/xq-light.css';
+@import '../../node_modules/@dvargas92495/codemirror/lib/codemirror.css';
+@import '../../node_modules/@dvargas92495/codemirror/theme/material.css';
+@import '../../node_modules/@dvargas92495/codemirror/theme/xq-light.css';
 @import '../../node_modules/prismjs/themes/prism.css';
 
 .react-codemirror2 {
